--- a/src/styles.css
+++ b/src/styles.css
@@ -236,13 +236,8 @@
 }
 
 .video-wrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  border: none;
 }
-
 .video-overlay {
   position: absolute;
   inset: 0;
@@ -283,9 +278,10 @@
 .tile-wrapper iframe {
   display: block;
   width: 100%;
-  height: 100%;
   aspect-ratio: 16 / 9;
   border-radius: 12px;
+  border: none;
+
 }
 
 @media (max-width: 991px) {
@@ -315,7 +311,7 @@
     width: 100%;
     max-width: 95vw;
     margin: 0 auto;
-    transform: none; /* Remove scale */
+    transform: none; 
     padding: 0 1rem;
   }
 
